# edpm-image-builder

./: .gitignore  .pre-commit-config.yaml  Containerfile.image  Containerfile.ramdisk  OWNERS  OWNERS_ALIASES  README.rst  block-device-yaml  copy_out.sh  edpm-hardened-uefi-centos-9-stream.yaml  ironic-python-agent-centos-9-stream.yaml  requirements.txt  setup.cfg
.github/workflows/: edpm-bootc.yaml
bootc/: Containerfile.centos9  Makefile  README.rst
bootc/ansible-facts/: bootc.fact
dib/ceph/: REAMDE.md  package-installs.yaml
dib/edpm-base/: README.rst  package-installs.yaml
dib/edpm-partition-uefi/: README.rst  block-device-default.yaml  element-deps
dib/edpm-partition-uefi/environment.d/: 15-block-device.bash
dib/edpm-partition-uefi/finalise.d/: 51-efi-grub-cfg
dib/edpm-partition-uefi/post-install.d/: 98-enable-tmp-mount
dib/enable-packages-install/environment.d/: 01-export-install-types.bash
dib/host-ca/: README.rst
dib/host-ca/extra-data.d/: 10-host-ca
dib/host-ca/pre-install.d/: 00-host-ca
dib/iptables/: README.md  package-installs.yaml
dib/ironic-agent-multipath/: README.rst
dib/openvswitch/: package-installs.yaml
dib/override-pip-and-virtualenv/: README.md
dib/remove-resolvconf/: README.md
dib/repo-setup/: README.md
dib/reset-bls-entries/: README.rst
images/: edpm-hardened-uefi-centos-9-stream.yaml  edpm-hardened-uefi-fips.yaml  edpm-hardened-uefi-rhel-9.yaml  ironic-python-agent-centos-9-stream.yaml  ironic-python-agent-fips.yaml  ironic-python-agent-rhel-9.yaml
zuul.d/: jobs.yaml  projects.yaml
(+5 files in other folders)
