[metadata]
name = edpm-image-builder
summary = Tools and scripts to build operatiing system images for EDPM
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
python_requires = >=3.8
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[entry_points]

[files]
data_files =
    share/edpm-image-builder/dib = dib/*
    share/edpm-image-builder/images = images/*
    share/edpm-image-builder/Containerfile.image = Containerfile.image
    share/edpm-image-builder/Containerfile.ramdisk = Containerfile.ramdisk
    share/edpm-image-builder/copy_out.sh = copy_out.sh
